Update project settings